--- a/Index.html
+++ b/Index.html
@@ -6,13 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <img src = "C:\Users\Владака\Desktop\уник\WEB2\Задание 1\Screenshot_1.jpg" alt = "Картинка 1">
-    <img src = "C:\Users\Владака\Desktop\уник\WEB2\Задание 1\Screenshot_2.jpg" alt = "Картинка 2">
-    <img src = "C:\Users\Владака\Desktop\уник\WEB2\Задание 1\Screenshot_3.jpg" alt = "Картинка 3">
-    <img src = "C:\Users\Владака\Desktop\уник\WEB2\Задание 1\Screenshot_4.jpg" alt = "Картинка 4">
-    <img src = "C:\Users\Владака\Desktop\уник\WEB2\Задание 1\Screenshot_5.jpg" alt = "Картинка 5">
-    <img src = "C:\Users\Владака\Desktop\уник\WEB2\Задание 1\Screenshot_6.jpg" alt = "Картинка 6">
-    <img src = "C:\Users\Владака\Desktop\уник\WEB2\Задание 1\Screenshot_7.jpg" alt = "Картинка 7">
+    <img src = "Screenshot_1.jpg" alt = "Картинка 1">
+    <img src = "Screenshot_2.jpg" alt = "Картинка 2">
+    <img src = "Screenshot_3.jpg" alt = "Картинка 3">
+    <img src = "Screenshot_4.jpg" alt = "Картинка 4">
+    <img src = "Screenshot_5.jpg" alt = "Картинка 5">
+    <img src = "Screenshot_6.jpg" alt = "Картинка 6">
+    <img src = "Screenshot_7.jpg" alt = "Картинка 7">
     
 </body>
 </html>
