--- a/Index.html
+++ b/Index.html
@@ -13,6 +13,8 @@
     <img src = "Screenshot_5.jpg" alt = "Картинка 5">
     <img src = "Screenshot_6.jpg" alt = "Картинка 6">
     <img src = "Screenshot_7.jpg" alt = "Картинка 7">
+    <img src = "Screenshot_8.jpg" alt = "Картинка 8">
+    <img src = "Screenshot_9.jpg" alt = "Картинка 9">
     
 </body>
 </html>
